wrap fix

--- a/styles/MarkdownEditor.module.scss
+++ b/styles/MarkdownEditor.module.scss
@@ -20,7 +20,8 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
 
   & > div {
     position: relative;
